# shopping_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_watchlist_schema.py
docs/: architecture.md  varus_api_notes.md
src/shopping_bot/: __main__.py  config.py  logging_setup.py  main.py
src/shopping_bot/bot/: __init__.py  dispatcher.py  handlers.py  keyboards.py  message_log.py  notifier.py  random_pick.py  rendering.py  states.py
src/shopping_bot/db/: models.py  session.py
src/shopping_bot/scheduler/: __init__.py  events.py  runner.py  scan.py
src/shopping_bot/sources/: __init__.py  base.py  varus.py
tests/: test_events.py  test_rendering.py  test_scan.py  test_smoke.py  test_varus_source.py
