[project]
name = "shopping_bot"
version = "0.1.0"
description = "Telegram bot that tracks grocery discounts across Ukrainian supermarkets (Varus, and later ATB, Silpo, etc.)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "pydantic-settings>=2.5",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.32",
    "ruff>=0.7",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shopping_bot"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
